Core logic revamp